# orgb

./: .clang-format  .clang-tidy  .clang-tidy-analysis  .dockerignore  .env  .gitignore  CODE_QUALITY_ROADMAP.md  Dockerfile.arm64  EMSCRIPTEN.md  LICENSE  OSC_THREADING_IMPLEMENTATION.md  README.md  SHADERS.md  TESTING.md  add_override.sh  addons.make  addons.make.emscripten  addons.make.macos  addons.make.rpi  analyze_code_quality.sh  analyze_warnings.sh  analyze_warnings_v2.sh  analyze_warnings_v3.sh  burst.sh  clang_tidy_warnings.txt  clang_tidy_warnings_v2.txt  clang_tidy_warnings_v3.txt  config.make  config.make.emscripten  config.make.macos  config.make.rpi  find_string_params.sh  fix_explicit.sh  fix_init_variables.sh  fix_override.sh  justfile  lefthook.yml  pedal.txt  run.sh  run_clang_tidy.sh  (+1 more)
.claude/: settings.local.json
.github/workflows/: ci.yaml  ci.yml  lint.yaml  shaders.yml  test.yaml
matrix_notes/: rotate_180.txt  rotate_90.txt  translate_0_200.txt  translate_100_0_push.txt
orgb.xcodeproj/: project.pbxproj
orgb.xcodeproj/xcshareddata/xcschemes/: orgb Debug.xcscheme  orgb Release.xcscheme
scripts/: README_OSC_TESTING.md  emscripten-server.sh  test_osc_sender.py  validateShaders.sh
src/: ColorProvider.cpp  ColorProvider.hpp  ColorUtilities.cpp  ColorUtilities.hpp  DrawContext.cpp  DrawContext.hpp  DrawManager.cpp  DrawManager.hpp  ImageWrapper.cpp  ImageWrapper.hpp  KeyState.cpp  KeyState.hpp  Press.cpp  Press.hpp  ShaderEffect.cpp  ShaderEffect.hpp  ShaderHotReloader.hpp  ShaderPipeline.cpp  ShaderPipeline.hpp  ThreadSafeMQTTQueue.hpp  ThreadSafeOSCQueue.hpp  Utilities.cpp  Utilities.hpp  main.cpp  ofApp.cpp  ofApp.h  ofAppIO.cpp  ofAppKeyboardComms.cpp  ofAppLED.cpp  ofAppLogo.cpp  ofAppMqttComms.cpp  ofAppNDIComponents.cpp  ofAppOSCComms.cpp
src/Effects/: AllEffects.hpp  ChromaticAberrationEffect.cpp  ChromaticAberrationEffect.hpp  DigitalGlitchEffect.cpp  DigitalGlitchEffect.hpp  DisplacementEffect.cpp  DisplacementEffect.hpp  FeedbackEffect.cpp  FeedbackEffect.hpp  FilmGrainEffect.cpp  FilmGrainEffect.hpp  ScanlinesEffect.cpp  ScanlinesEffect.hpp  VHSGlitchEffect.cpp  VHSGlitchEffect.hpp
src/Forms/: BaseParticle.cpp  BaseParticle.hpp  Field.cpp  Field.hpp  Flock.cpp  Flock.hpp  ImageSprocket.cpp  ImageSprocket.hpp  Lotus.cpp  Lotus.hpp  Particle.cpp  Particle.h  SizedSprite.cpp  SizedSprite.hpp  VisualForm.cpp  VisualForm.hpp  ofAppUtilities.cpp
src/Forms/Glow/: GlowLinePlayground.cpp  GlowLinePlayground.hpp  Orbit.cpp  Orbit.hpp
src/Forms/Lightning/: LightningBolt.cpp  LightningBolt.hpp  RapidThunder.cpp  RapidThunder.hpp  Thunder.cpp  Thunder.hpp
src/Forms/Particles/: BaseParticles.cpp  BaseParticles.hpp  EdgeParticles.cpp  EdgeParticles.hpp  GravityParticles.cpp  GravityParticles.hpp  RadialParticles.cpp  RadialParticles.hpp  RandomParticles.cpp  RandomParticles.hpp
src/Forms/Shapes/: FatGlowShape.cpp  FatGlowShape.hpp  GlowShape.cpp  GlowShape.hpp  MeshGrid.cpp  MeshGrid.hpp  NoiseGrid.cpp  NoiseGrid.hpp  Shape.cpp  Shape.hpp
src/Forms/Waves/: BaseWaves.cpp  BaseWaves.hpp  EdgeLasers.cpp  EdgeLasers.hpp  LaserWaves.cpp  LaserWaves.hpp  PointWaves.cpp  PointWaves.hpp
src/core/: Color.hpp  MathUtils.hpp  Random.hpp
tests/: .gitignore  CMakeLists.txt  README.md  run_tests.sh  shader_tests.cpp  test_colorprovider.cpp  test_flock.cpp  test_keystate.cpp  test_press.cpp  test_utilities.cpp
tests/integration/: CMakeLists.txt  test_forms_rendering.cpp  test_postprocessing.cpp  test_shader_compilation.cpp
tests/integration/fixtures/: FormTestFixture.hpp  GLTestFixture.cpp  GLTestFixture.hpp
tests/unit/: CMakeLists.txt  test_colorprovider.cpp  test_keystate.cpp  test_press.cpp  test_utilities.cpp
